alterações para projeto controle de estacionamento

--- a/controle-estacionamento/src/main/resources/application.properties
+++ b/controle-estacionamento/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/Projeto_Estacionamento_DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/Projeto_Estacionamento_DB
 spring.datasource.username=postgres
-spring.datasource.password=Gfc198102*
+spring.datasource.password=1981
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
